[Release] Add install targets & fix JM
- Master
- Scheduler
- Worker

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,10 +39,15 @@ include(dep)
 
 find_library(URSA_LIB NAMES axe HINTS lib lib/static)
 find_library(URSA_LIB2 NAMES axe-core HINTS lib lib/static)
+# TODO(tatiana): handle failure case for finding the following two libs
+find_library(URSA_JM NAMES jm-driver HINTS lib lib/static)
+find_library(URSA_JP NAMES jp-driver HINTS lib lib/static)
 if (URSA_LIB)
   message(STATUS "Found Ursa library ${URSA_LIB}")
   if (URSA_LIB2)
     message(STATUS "Found Ursa library ${URSA_LIB2}")
+    message(STATUS "Found Ursa library ${URSA_JM}")
+    message(STATUS "Found Ursa library ${URSA_JP}")
   else()
     message(FATAL_ERROR "Cannot find ursa core library")
   endif()
@@ -62,9 +67,8 @@ include_directories(${URSA_INCLUDE})
 macro(add executable_prefix src_file)
   add_executable(${executable_prefix}JM ${src_file} ${ARGN})
   add_executable(${executable_prefix}JP ${src_file} ${ARGN})
-  target_link_libraries(${executable_prefix}JM ${URSA_LIBS} ${AXE_EXTERNAL_LIB})
-  target_link_libraries(${executable_prefix}JP ${URSA_LIBS} ${AXE_EXTERNAL_LIB})
-  set_target_properties(${executable_prefix}JM PROPERTIES COMPILE_DEFINITIONS "IsJobManager")
+  target_link_libraries(${executable_prefix}JM ${URSA_JM} ${URSA_LIBS} ${AXE_EXTERNAL_LIB})
+  target_link_libraries(${executable_prefix}JP ${URSA_JP} ${URSA_LIBS} ${AXE_EXTERNAL_LIB})
   set_property(TARGET ${executable_prefix}JM PROPERTY RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
   set_property(TARGET ${executable_prefix}JP PROPERTY RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 endmacro()
